hphp/test/zend/bad/ext/curl/tests/responder/get.php.skipif
always skip - not a test